...
                           Color="{StaticResource PrimaryColor}"
                           VerticalOptions="Center"
                           HorizontalOptions="Center"
                           ZIndex="10" />

        <SearchBar Grid.Row="0"
                   x:Name="TagsSearchBar"
                   AutomationId="TagsSearchBar"
                   Placeholder="Search tags..."
                   TextChanged="OnSearchTextChanged"
                   Style="{StaticResource BaseSearchBar}"
                   Margin="8,8,8,0" />

        <RefreshView Grid.Row="1" x:Name="RefreshView" Refreshing="OnRefreshing">
            <CollectionView x:Name="TagsList"
                            AutomationId="TagsList"
                            SelectionMode="None"
                            Margin="8,8,8,0">
                <CollectionView.EmptyView>
                    <StackLayout Padding="16" VerticalOptions="Center" HorizontalOptions="Center">
                        <Label Text="No tags found"
...
