...
                </CollectionView.EmptyView>
                <CollectionView.ItemTemplate>
                    <DataTemplate x:DataType="services:NoteListItem">
                        <SwipeView>
                            <SwipeView.RightItems>
                                <SwipeItems Mode="Execute">
                                    <SwipeItem Text="Delete" BackgroundColor="{StaticResource DangerColor}" Invoked="OnSwipeDelete" IsVisible="{Binding IsNote}" />
                                </SwipeItems>
                            </SwipeView.RightItems>
                            <Grid ColumnDefinitions="36,*" Padding="20,12" MinimumHeightRequest="56"
                                  BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}">
                                <Grid.GestureRecognizers>
                                    <TapGestureRecognizer Tapped="OnItemTapped" />
...
