appId: com.beememorybank.mobile
---
- runFlow: _go_home.yaml
- tapOn:
    text: "Open navigation drawer"
- extendedWaitUntil:
    visible:
      text: "Articles"
    timeout: 3000
- tapOn:
    text: "Articles"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/ArticlesList"
    timeout: 10000
- swipe:
    direction: DOWN
    duration: 1000
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/ArticlesList"
    timeout: 30000
- takeScreenshot: articles_after_refresh
