appId: com.beememorybank.mobile
---
- runFlow: _go_home.yaml
- tapOn:
    text: "Open navigation drawer"
- extendedWaitUntil:
    visible:
      text: "Articles"
    timeout: 3000
- tapOn:
    text: "Articles"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/ArticlesList"
    timeout: 10000
- tapOn:
    id: "com.beememorybank.mobile:id/SearchBar"
- inputText: "Matrix"
- extendedWaitUntil:
    visible:
      text: "The Matrix"
    timeout: 10000
- assertVisible:
    text: "The Matrix"
- takeScreenshot: search_result
